# wakanda-lb

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
.zed/: settings.json  tasks.json
dummy-backend/: Cargo.toml
dummy-backend/src/: main.rs
src/: Dockerfile  cli_arguments.rs  lib.rs  main.rs  request_id.rs
src/background_health_checker/: background_health_checker.rs  mod.rs  timed_background_health_checker.rs
src/benches/: run.sh
src/forward_service/: forward_service.rs  forward_service_error.rs  forward_service_request.rs  forward_service_response.rs  mod.rs  reqwest_forward_service.rs  simple_forward_service.rs
src/http_client/: alpha_client.rs  error.rs  http_client.rs  mod.rs  request.rs  reqwest_http_client.rs  response.rs
src/route/: forward.rs  health.rs  mod.rs
src/select_server/: error.rs  mod.rs  random_select_server.rs  request.rs  response.rs  round_robin_select_server.rs  select_server.rs
src/select_server_service/: mod.rs  random_select_server_service.rs  round_robin_select_server_service.rs  select_server_service.rs  select_server_service_error.rs  select_server_service_request.rs  select_server_service_response.rs
src/wakanda_http_service/: mod.rs  reqwest_http_service.rs  wakanda_http_service.rs  wakanda_http_service_error.rs  wakanda_http_service_request.rs  wakanda_http_service_response.rs
tests/: reqwest_forward_service_test.rs  reqwest_http_service_test.rs
