[package]
name = "load-balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
reqwest = "0.12.15"
async-trait = "0.1.89"
clap = { version = "4.5.38", features = ["derive"] }
tracing = "0.1.41"
tower-http = { version = "0.6.6", features = ["trace", "set-header", "request-id"] }
uuid = { version = "1.18.1", features = ["v4"] }
tracing-subscriber = {version = "0.3.20", features = ["env-filter"] }
http = "1.3.1"

[dev-dependencies]
mockall = {version = "0.13.1"}
